--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -8,6 +8,6 @@ template-data:
   unroll-variadic: True
 force-file-write: True
 packages:
-  gitlab.com/arielsrv/fxf/internal:
+  github.com/arielsrv/fxf/internal:
     config:
       recursive: true
